i7: Se edita package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unika",
-  "version": "1.0.0",
-  "description": "Captura comando por voz del micrófono (Recomendado para Ubuntu 20.04)",
+  "version": "1.10.140",
+  "description": "Captura comando por voz del micrófono (Recomendado para Ubuntu 20.04. Contexto de funcionalidad: node v14.21.3(nvm use lts/fermium) (npm v6.14.18))",
   "main": "index.js",
   "dependencies": {
     "node-record-lpcm16": "^1.0.1",
